examples/kong-gateway-operator/gateway-configuration.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kong
  labels:
    kuma.io/sidecar-injection: enabled
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: kong
    namespace: kong
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: kong
  namespace: kong
  annotations:
    cert-manager.io/cluster-issuer: "vault-issuer"
    cert-manager.io/common-name: "kong-gateway.immofficient.com"
spec:
  gatewayClassName: kong
  listeners:
    - name: https
      hostname: "*.immofficient.com"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: immofficient-com-tls
